# Corretor-Automatico

./: .gitattributes  AVL.hpp  CMakeLists.txt  README.md  corretor.hpp  interface.hpp  main.cpp  palavras.txt
